significantly better slider, correctly aligned

--- a/assets/css/liquid-slider.css
+++ b/assets/css/liquid-slider.css
@@ -29,8 +29,8 @@
 .liquid-slider {
   background: #f2f2f2;
   width: 600px;
-  margin: 0 auto;
-  float: left;
+  margin:auto;
+  float: left;;
   overflow: hidden;
   position: relative;
 }
@@ -59,9 +59,9 @@
 
 /*** Panels ***/
 .liquid-slider .ls-panel {  
-  width: 600px;
+  width: 750px;
   display: block;
-  float: left;
+  float: left;;
 }
 .panel-wrapper {  
   padding: 15px 40px;
@@ -103,7 +103,7 @@
 }
 .ls-nav ul li a {
   display: block;
-  float: left;
+  float: left;;
   text-decoration: none;
 }
 
@@ -131,7 +131,7 @@
 /*** Arrow Navigation (non-graphical) ***/
 .ls-nav-left, .ls-nav-right {
   top:0;
-  float: left;
+  float: left;;
   clear:both;
 }
 .ls-nav-left a, .ls-nav-right a {
@@ -171,7 +171,7 @@
 /*** Arrow Navigation (graphical) ***/
 .ls-nav-left-arrow, .ls-nav-right-arrow {
   cursor: pointer;
-  float: left;
+  float: left;;
   clear: both;
 }
 .ls-nav-left-arrow a, .ls-nav-right-arrow a {
